--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: red;
+    background-color: black;
     gap: 60px;
     margin: 30px;
 }
@@ -22,13 +22,15 @@ button{
     flex-direction: column;
     align-items: center;
     margin-top: 0px;
+    margin-bottom: 20px;
+    color: white;
 }
 .split{
     display: flex;
     align-items: center;
     justify-content: space-around;
     gap: 200px;
-    border: 3px solid black;
+    border: 3px solid white;
     padding: 10px;
 }
 .player_vs_computer {
@@ -50,5 +52,23 @@ button{
     margin:0px;
     padding: 0px;
     justify-content: space-around;
-    gap: 300px;
+    gap: 400px;
+}
+h1{
+    margin: 0px;
+    margin-bottom: 20px;
+    color: white;
+    text-decoration: underline;
+    font-size: 40px;
+}
+h2{
+    margin: 0px;;
+    color: white;
+    font-size: 35px;
+    font-weight: bold;
+    
+}
+.winner{
+    margin-top: 30px;
+    color: white;
 }
